status/sp/spoon/1.0.1/macos/darwin-23.5.0/gnat=10.3.2/spoon-1.0.1.yaml.log
Test ran at 2024-12-21 12:32:33.047704+00:00

SOLUTION:
spoon=1.0.1: Use posix_spawn() to spawn processes without forking
Origin: commit c07167a55d5fa2ebbfa7ff4689959e08128e8a69 from https://github.com/onox/spoon.git
Available when: (case OS is Linux => True, Macos => True, others => False)
Properties:
   Author: onox
   Build Switches: 
   Description: Use posix_spawn() to spawn processes without forking
   License: Apache-2.0
   Maintainer: onox <denkpadje@gmail.com>
   Maintainers_Logins: onox
   Name: spoon
   Tag: posix
   Tag: spawn
   Tag: process
   Version: 1.0.1
   Website: https://github.com/onox/spoon


LOG:
Note: Deploying spoon=1.0.1...
Note: Building spoon/spoon.gpr...
Setup
   [mkdir]        object directory for project Spoon
   [mkdir]        library directory for project Spoon
Compile
   [C]            knife.c
   [Ada]          spoon.adb
   [Ada]          spoon-api.ads
   [Ada]          spoon-output.adb
   [Ada]          spoon-pipes.adb
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/spawn.h:32,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/5f17194b-711c-4771-8a4c-8e374b56d2e7/spoon_1.0.1_c07167a5/src/knife.c:17:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:567:30: error: missing ')' after "__has_attribute"
  567 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:567:32: error: missing binary operator before token "unsafe_buffer_usage"
  567 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~

   compilation of knife.c failed

gprbuild: *** compilation phase failed
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/5f17194b-711c-4771-8a4c-8e374b56d2e7/spoon_1.0.1_c07167a5/spoon.gpr"] exited with code 4
ERROR: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/5f17194b-711c-4771-8a4c-8e374b56d2e7/spoon_1.0.1_c07167a5/spoon.gpr"] exited with code 4
stderr: ALIRE.CHECKED_ERROR
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/5f17194b-711c-4771-8a4c-8e374b56d2e7/spoon_1.0.1_c07167a5/spoon.gpr"] exited with code 4
stderr: raised ALIRE.CHECKED_ERROR : alire-stored-error:1
Load address: 0x10433a000
Call stack traceback locations:
0x104c42415 0x104915e83 0x104b28df9 0x104b29581 0x104a89ac3 0x104a87f99 0x104aa4873 0x104af0dc1 0x104aef81a 0x104aa49b8 0x104a88349 0x1043999c1 0x1043aa578 0x1043af01c 0x10443505c 0x1044403b8 0x10433b605 0x10433e914


Warning: spoon=1.0.1 successfully retrieved but its build failed.
There are no dependencies.
ERROR: Build ended with errors
